# j3MarkDown

./: README.md
src/: .gitignore  AGENTS.md  THIRD-PARTY-NOTICES.txt  THIRD_PARTY_NOTICES.txt  about.txt  build_release.py  index.html  package.json  pnpm-lock.yaml  tsconfig.test.json  vite.config.ts
src/docs/: architecture.md  canonical-sources.md  data-contract.md  file-handling.md  license-compliance.md  manual-checks.md  product-scope.md  ui-behavior.md
src/scripts/: generate-third-party-notices.mjs  start-vscode-tauri-dev.ps1  stop-vscode-tauri-dev.ps1
src/src/: main.ts  styles.css
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src-tauri/capabilities/: default.json
src/src-tauri/src/: app_config.rs  app_info.rs  document_windows.rs  launch_args.rs  lib.rs  main.rs  markdown_files.rs
src/src-tauri/src/markdown_files/: atomic_write.rs  paths.rs  service.rs
src/src/app/: App.ts  about-text.ts  app-info.ts  app-settings.ts  app-shell.ts  document-state.ts  file-commands.ts  file-drop.ts  i18n.ts  license-notices.ts  save-queue.ts  startup-profile.ts  window-close-guard.ts
src/src/components/: EditorContextMenu.ts  MarkdownEditor.ts  StatusBar.ts  TabBar.ts  Toolbar.ts  milkdown-themes.ts
src/tests/: document-state.test.mjs  markdown-user-flow.e2e.mjs  tauri-config.test.mjs  unsaved-protection.e2e.mjs  window-close-guard.test.mjs
