[package]
name = "j3markdown"
version = "0.1.1"
description = "A Windows-first Markdown editor built with Tauri 2."
authors = ["j3Markdown contributors"]
edition = "2021"

[lib]
name = "j3markdown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = { version = "0.17", default-features = false }
tauri = { version = "2", features = [] }
